--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TiendaOpen</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
@@ -12,7 +13,7 @@
         <nav>
             <ul>
                 <li>Home</li>
-                <li>Producto</li>
+                <li>Product</li>
                 <li>Shop</li>
                 <li>Sign in</li>
             </ul>
