--- a/blog.html
+++ b/blog.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <div id="container">
+
+        
         <div id="cabecera">
-            Cabecera
+            Cabecerav1
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
