--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 
         
         <div id="cabecera">
-            Cabecerav1
+            Master Git <span id="tagline">Tu blog</span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
