--- a/blog.html
+++ b/blog.html
@@ -14,6 +14,7 @@
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio doloremque impedit sapiente molestias, iusto sed delectus voluptates nostrum saepe sunt ea et quos ad quia blanditiis perferendis sit. Dolorem, quod?</p>
         </div>
     </div>
 </body>
