agregar nuevo <p> y cambio  de color azul

--- a/blog.html
+++ b/blog.html
@@ -11,12 +11,13 @@
 
         
         <div id="cabecera">
-            Master Git <span id="tagline">Tu blog</span>
+            Master Git <span id="tagline">Tu maestro</span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio doloremque impedit sapiente molestias, iusto sed delectus voluptates nostrum saepe sunt ea et quos ad quia blanditiis perferendis sit. Dolorem, quod?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error sapiente necessitatibus obcaecati culpa porro reiciendis. Architecto quisquam aliquam ea laboriosam optio ducimus ab totam possimus sed, vero voluptatibus blanditiis accusamus?</p>
         </div>
     </div>
 </body>
