--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenido a este nuevo blog</title>
+    <title>Bienvenido a este nuevo blog 2.0</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
